track cropper size, default to image dimensions with no fixedRatio

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@
 #drop-target {
   width: 300px;
   height: 300px;
-  background-color: red;
 }
 .img-wrapper {
-  width: 100%;
+  width: 75%;
   height: auto;
+}
+.dimensions {
+  color: firebrick;
 }
